buttons alignment fix

--- a/css/confirm_style.css
+++ b/css/confirm_style.css
@@ -14,7 +14,7 @@
   font-size: 15px;
 
   padding: 12px 18px;
-  margin: 20px;
+  
 
   border: none;
   border-radius: 24px;
