--- a/css/header_style.css
+++ b/css/header_style.css
@@ -20,12 +20,20 @@
   align-items: center;
 }
 
-#appHeadContent #findElements {
-  margin-left: auto;
-  margin-right: 20px;
-  float: right;
-}
-
 #appTitle {
   margin-left: 30px;
+}
+
+#buttonsBox {
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  margin: 25px 20px 25px 0;
+}
+
+#supportButton{
+  margin-right: 20px;
 }
